# cplus_cplus_pacman

./: CMakeLists.txt  Readme.md  main.cpp
code/include/: CollectableList.hpp  CollectableManager.hpp  CollisionManager.hpp  CollisionsManager.hpp  Constants.hpp  Game.hpp  GameMap.hpp  Ghost.hpp  GhostFactory.hpp  GhostMovementPatterns.hpp  Level.hpp  Player.hpp  ScoreManager.hpp  SoundPlayer.hpp  Types.hpp  UIManager.hpp
code/include/pathfinder/: Pathfinder.hpp
code/include/scenes/: GameScene.hpp  IScene.hpp  MainMenuScene.hpp
code/include/utils/: Collisions.hpp  CountdownTimer.hpp  Entity.hpp  EntityMovable.hpp  Renderer.hpp  SDLImageInitializer.hpp  SDLInitializer.hpp  SoundManager.hpp  SpriteSheetAnimation.hpp  TextManager.hpp  Vec2.hpp
code/src/: CollectableList.cpp  CollectableManager.cpp  CollisionManager.cpp  Game.cpp  GameMap.cpp  Ghost.cpp  GhostFactory.cpp  GhostMovementPatterns.cpp  Level.cpp  Player.cpp  ScoreManager.cpp  SoundPlayer.cpp  UIManager.cpp
code/src/pathfinder/: Pathfinder.cpp
code/src/scenes/: GameScene.cpp  MainMenuScene.cpp
code/src/utils/: Collisions.cpp  CountdownTimer.cpp  Entity.cpp  EntityMovable.cpp  Renderer.cpp  SoundManager.cpp  SpritesheetAnimation.cpp  TextManager.cpp  Vec2.cpp
lib/SDL2/macos_arm64/sdl2/2.30.9/: INSTALL_RECEIPT.json  sbom.spdx.json
lib/SDL2/macos_arm64/sdl2/2.30.9/.brew/: sdl2.rb
lib/SDL2/macos_arm64/sdl2_image/2.8.2_2/: INSTALL_RECEIPT.json  sbom.spdx.json
lib/SDL2/macos_arm64/sdl2_image/2.8.2_2/.brew/: sdl2_image.rb
lib/SDL2/macos_arm64/sdl2_mixer/2.8.0/: INSTALL_RECEIPT.json  sbom.spdx.json
lib/SDL2/macos_arm64/sdl2_ttf/2.22.0/: INSTALL_RECEIPT.json  sbom.spdx.json
